2004-08-08  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c:
	* gweather.h:
	* gweather.c: Add kPa to the list of pressure preferences. Closes
	#149612. Patch by Ryan Lortie <desrt@desrt.ca>.

2004-08-04  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* Locations.xml.in: Corrected Aguascaliantes to Aguascalientes
	correct spelling

2004-07-25  Gareth Owen  <gowen72@yahoo.com>

	* Locations.xml.in: Added Aigen Im Ennstal to Austrian
	locations.

	Fixes bug #148170

	Patch by Patrick Steiner <patrick.steiner@a1.net>

2004-07-25  Gareth Owen  <gowen72@yahoo.com>

	* weather.c: Remove C99isms

	Fixes bug #148050

	Patch by Joe Marcus Clarke <marcus@freebsd.org>

2004-07-25  Gareth Owen  <gowen72@yahoo.com>

	* gweather-pref.c: Fix compile of systems without _NL_MEASUREMENT_MEASUREMENT

	Fixes bug #148049

	Patch by Joe Marcus Clarke <marcus@freebsd.org>

2004-07-08  Gareth Owen  <gowen72@yahoo.com>

	* Locations.xml.in: Corrected zone for Washington DC

	Fixes bug #145625

2004-07-06  Gareth Owen <gowen72@yahoo.com>

	* weather.c: (metar_tok_wind): Mapping of wind directions [237..247]

	Fixes bug #145053

	Patch by Frank Solensky <frank@solensky.org>

2004-07-06  Gareth Owen  <gowen72@yahoo.com>

	* gweather-applet.c (size_allocate_cb): added callback
	for changes in panel size.

	Fixes bug #135205

	Patch by Vincent Noel <vnoel@cox.net>

2004-06-26  Gareth Owen  <gowen72@yahoo.com>

	* docs/C/gweather.xml: Updated document to match recent changes.

	Fixes bug #144957

2004-06-26  Dennis Smit  <ds@nerds-incorporated.org>

	* docs/C/gweather.xml: Add brief description of "feels like"

	* gweather-dialog.c: (gweather_dialog_create),
	(gweather_dialog_update): Add fields for apparent temperature

	* gweather.h: Add widget for apparent temperature

	* weather.c: (calc_humidity), (weather_info_get_humidity):
	Calculate humidity as a gdouble instead of int

	* (calc_apparent), (weahter_info_get_apparent): Added
