@@ -1,3 +1,9 @@
+2004-08-09  Davyd Madeley  <davyd@madeley.id.au>
+
+	* gweather-pref.c: Change centigrade to celsius. Closes bug #149541.
+	* docs/C/gweather.xml: Change centigrade to celsius to reflect update
+	in UI. Also add kPa to the list of pressures.
+
 2004-08-08  Davyd Madeley  <davyd@madeley.id.au>
 
 	* gweather-pref.c:
